--- a/blindr/vercel.json
+++ b/blindr/vercel.json
@@ -10,5 +10,10 @@
         "src": "/(.*)",
         "dest": "blindr/wsgi.py"
       }
-    ]
+    ],
+    "functions": {
+      "api/**/*.py": {
+        "excludeFiles": "media/**"
+      }
+    }
 }
