--- a/blindr/vercel.json
+++ b/blindr/vercel.json
@@ -13,7 +13,7 @@
     ],
     "functions": {
       "api/**/*.py": {
-        "excludeFiles": "media/**"
+        "excludeFiles": "meia/**"
       }
     }
 }
