--- a/blindr/vercel.json
+++ b/blindr/vercel.json
@@ -12,7 +12,7 @@
       }
     ],
     "functions": {
-      "api/**/*.py": {
+      "blindr/**/*.py": {
         "excludeFiles": "meia/**"
       }
     }
